Blog carga artículos mediante axios
Cargamos el último artículo mediante axios y generamos un pequeño menú de navegación para cargar artículos anteriores

--- a/blog/20190224T1620.md
+++ b/blog/20190224T1620.md
@@ -1,7 +1,6 @@
-## The twelve-factor app
 ["The twelve-factor app"](https://12factor.net/) es una metodología para construir aplicaciones SaaS propuesta por Adam Wiggins co-fundador de Heroku, a finales del 2011.
 
-Si bien ha recidibo controversia, dado que los 12 factores se ajustan casi exclusivamente a los flujos de trabajo con Heroku, el manifesto me ha parecido interesante dado que varios de los puntos están evidentemente inspirados por los movimientos de DevOps y la arquitectura de microservicios, pero principalmente porque parece ser una buena síntesis de los 6 años de experiencia de Wiggins como CTO de una de las primeras plataformas en la nube.
+Si bien ha recidibo controversia, dado que los 12 factores se ajustan casi exclusivamente a los flujos de trabajo con Heroku, el manifesto me ha parecido interesante dado que varios de los puntos están evidentemente inspirados por los movimientos de DevOps y la arquitectura de microservicios, pero principalmente por ser una síntesis de los 6 años de experiencia de Wiggins como CTO de una de las primeras plataformas en la nube.
 
 The 12 factors
 
